--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -78,6 +78,7 @@
     </button>
 
     <button
+      disabled
       mat-mini-fab
       [matMenuTriggerFor]="IcMenu"
       #POSPartnerMenuTrigger="matMenuTrigger"
