--- a/src/app/home/mainboard/mainboard.component.html
+++ b/src/app/home/mainboard/mainboard.component.html
@@ -33,14 +33,14 @@
 
         </mat-cell>
       </ng-container>
-      <ng-container matColumnDef="officeName">
+      <!-- <ng-container matColumnDef="officeName">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Chi nhánh</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <span class="mobile-label">Chi nhánh:</span>
 
           <span>{{ row.officeName }}</span>
         </mat-cell>
-      </ng-container>
+      </ng-container> -->
 
       <!-- Progress Column -->
       <ng-container matColumnDef="displayName">
@@ -55,13 +55,13 @@
       </ng-container>
 
       <!-- Name Column -->
-      <ng-container matColumnDef="mobileNo">
+      <!-- <ng-container matColumnDef="mobileNo">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Số ĐT</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <span class="mobile-label">Số ĐT:</span>
           <span>{{ row.mobileNo }}</span>
         </mat-cell>
-      </ng-container>
+      </ng-container> -->
 
       <!-- Color Column -->
       <ng-container matColumnDef="documentKey">
