--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -142,8 +142,8 @@
       </mat-menu>
 
       <mat-menu #BookingMenu="matMenu" [overlapTrigger]="false">
-        <button mat-menu-item routerLink="/booking/agency">Đại lý</button>
-        <button mat-menu-item routerLink="/booking/create">Tạo booking nội bộ</button>
+        <!-- <button mat-menu-item routerLink="/booking/agency">Đại lý</button> -->
+        <button disabled mat-menu-item routerLink="/booking/create">Tạo booking nội bộ</button>
         <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/booking/view">
           Quản lý booking nội bộ
         </button>
