--- a/src/app/core/shell/toolbar/menu/menu.component.html
+++ b/src/app/core/shell/toolbar/menu/menu.component.html
@@ -176,8 +176,8 @@
 </mat-menu>
 
 <mat-menu #BookingMenu="matMenu" [overlapTrigger]="false" yPosition="above" xPosition="before" backdropClass="mymenu">
-  <button mat-menu-item routerLink="/booking/agency">Đại lý</button>
-  <button mat-menu-item routerLink="/booking/create">Tạo booking nội bộ</button>
+  <!-- <button disabled mat-menu-item routerLink="/booking/agency">Đại lý</button> -->
+  <button disabled mat-menu-item routerLink="/booking/create">Tạo booking nội bộ</button>
   <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/booking/view">Quản lý booking nội bộ</button>
 </mat-menu>
 
