--- a/src/app/card-transfer/create-transfer/create-transfer.component.scss
+++ b/src/app/card-transfer/create-transfer/create-transfer.component.scss
@@ -57,6 +57,16 @@ h2{
   color: rgba(0, 0, 0, 0.87);
 }
 
+.mat-select {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.15px;
+  color: rgba(0, 0, 0, 0.87);
+}
+
 .mat-raised-button {
   border-radius: 28px !important;
   width: 40px !important;
