--- a/src/app/booking-manage/dialog/detail-branch-booking/detail-branch-booking.component.html
+++ b/src/app/booking-manage/dialog/detail-branch-booking/detail-branch-booking.component.html
@@ -20,14 +20,35 @@
         </ng-container>
         <ng-container matColumnDef="batchNo">
           <th mat-header-cell *matHeaderCellDef>Số lô</th>
-          <td mat-cell *matCellDef="let transaction">
-            {{ transaction.batchNo }}
-          </td>
+          <td mat-cell *matCellDef="let transaction">{{ transaction.batchNo }} <br /></td>
         </ng-container>
 
         <ng-container matColumnDef="amount">
           <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Số tiền</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">{{ transaction.amount | money }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="bill">
+          <th mat-header-cell *matHeaderCellDef>Bill tổng</th>
+          <td mat-cell *matCellDef="let transaction">
+            <button
+              *ngIf="transaction.clientId && transaction.resourceId"
+              class="document-action-button"
+              mat-raised-button
+              color="primary"
+              (click)="download(transaction.clientId, transaction.resourceId)"
+            >
+              <fa-icon icon="cloud-download-alt" matTooltip="Tải về"></fa-icon>
+            </button>
+            <div *ngIf="!transaction.clientId && !transaction.resourceId"
+            style="color: red; text-decoration: underline;">
+            <input
+              type="file"
+              (change)="changeListener($event, transaction.bookingRefNo)"
+              accept="image/png, image/jpeg"
+            />
+          </div>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
