hide download voucher , make fee transaction
hide download voucher on manage transaction page on permission , hide downvoucher, make fee on page after success transaction

--- a/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
+++ b/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-content>
   <h1 style="color: green">Chúc mừng! Bạn đã thực hiện giao dịch [{{ transactionInfo.trnRefNo }}] thành công</h1>
   <h2>Bạn sẽ</h2>
-  <mat-dialog-actions align="center">
+  <!-- <mat-dialog-actions align="center">
     <button (click)="this.downloadVoucherTransaction()" mat-raised-button color="primary">
       <fa-icon icon="download"></fa-icon>&nbsp;&nbsp; Tải hóa đơn
     </button>
@@ -10,7 +10,7 @@
     </button>
   </mat-dialog-actions>
 
-  <h2>Hay là</h2>
+  <h2>Hay là</h2> -->
   <ul>
     <li>
       Tiếp tục giao dịch với thẻ {{ transactionInfo.panNumber }} của khách hàng {{ transactionInfo.clientName }}.
