fix type rate input

--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -110,7 +110,8 @@
               <mat-form-field>
                 <mat-label>Nhập phí (%/giá trị giao dịch)</mat-label>
                 <input
-                  type="text"
+                  type="number"
+                  step="0.01"
                   class="center"
                   matInput
                   formControlName="rate"
