--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -55,7 +55,7 @@
       </button>
       <button
         (click)="ExportExcel()"
-        style="align-self: center"
+        style="align-self: center; margin-left: 5px;"
         color="primary"
         mat-raised-button
       >
