open edit ismapingbill for both local and owner

--- a/src/app/terminals/edit-terminals/edit-terminals.component.html
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.html
@@ -131,7 +131,7 @@
               </mat-card-title>
             </mat-card-header>
             <mat-card-content fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-              <mat-checkbox  *ngIf="isOwner"
+              <mat-checkbox
               fxFlex="20%"
               labelPosition="before"
               formControlName="isMappingBill"
