--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -76,7 +76,16 @@
           <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef>Trạng thái</th>
             <td mat-cell *matCellDef="let identity">
-              {{ identity.status === "clientIdentifierStatusType.active" ? "A" : "-" }}
+              <!-- {{ identity.status === "clientIdentifierStatusType.active" ? "A" : "-" }} -->
+              <section class="example-section">
+                <mat-slide-toggle
+                    class="example-margin"
+                    [checked]= "identity.status === 'clientIdentifierStatusType.active' ? true : false"
+                    (change)="onToggleCardStatus($event, identity.id)"
+                  >
+                  slide to hold card
+                </mat-slide-toggle>
+              </section>
             </td>
           </ng-container>
 
