--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -74,18 +74,25 @@
           </ng-container>
 
           <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Trạng thái</th>
+            <th mat-header-cell *matHeaderCellDef>Trạng thái giữ thẻ</th>
             <td mat-cell *matCellDef="let identity">
               <!-- {{ identity.status === "clientIdentifierStatusType.active" ? "A" : "-" }} -->
-              <section class="example-section">
+              <!-- <section class="example-section">
                 <mat-slide-toggle
                     class="example-margin"
                     [checked]= "identity.status === 'clientIdentifierStatusType.active' ? true : false"
                     (change)="onToggleCardStatus($event, identity.id)"
                   >
-                  slide to hold card
+                  <label *ngIf="identity.status === 'clientIdentifierStatusType.active'"> slide to un hold card </label>
+                  <label *ngIf="identity.status !== 'clientIdentifierStatusType.active'"> slide to hold card </label>
+
                 </mat-slide-toggle>
-              </section>
+              </section> -->
+              <mat-checkbox
+              [checked]= "identity.status === 'clientIdentifierStatusType.active' ? true : false"
+              (change)="onToggleCardStatus($event, identity.id)">
+              </mat-checkbox>
+
             </td>
           </ng-container>
 
