--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -74,36 +74,26 @@
 <!--          </ng-container>-->
 
           <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Giữ thẻ</th>
-            <td mat-cell *matCellDef="let identity"
-                matTooltip="slide to hold card"
-                matTooltipPosition="below"
-            >
+            <th mat-header-cell *matHeaderCellDef>Trạng thái giữ thẻ</th>
+            <td mat-cell *matCellDef="let identity">
               <!-- {{ identity.status === "clientIdentifierStatusType.active" ? "A" : "-" }} -->
-
+              <!-- <section class="example-section">
                 <mat-slide-toggle
                     class="example-margin"
                     [checked]= "identity.status === 'clientIdentifierStatusType.active' ? true : false"
                     (change)="onToggleCardStatus($event, identity.id)"
 
                   >
+                  <label *ngIf="identity.status === 'clientIdentifierStatusType.active'"> slide to un hold card </label>
+                  <label *ngIf="identity.status !== 'clientIdentifierStatusType.active'"> slide to hold card </label>
 
                 </mat-slide-toggle>
+              </section> -->
+              <mat-checkbox
+              [checked]= "identity.status === 'clientIdentifierStatusType.active' ? true : false"
+              (change)="onToggleCardStatus($event, identity.id)">
+              </mat-checkbox>
 
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="expandedDetail">
-            <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="identitiesColumns.length">
-              <div class="example-element-detail"
-                   [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                <div class="example-element-description" fxLayout="column">
-                  <div>
-                    <span style="font-weight: bold;">{{ 'Client_Component.tblColAccount'| translate}} :</span> &nbsp;{{element.description}}
-                  </div>
-
-                </div>
-              </div>
             </td>
           </ng-container>
 
