--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
@@ -72,7 +72,7 @@
 
           <mat-form-field *ngIf="createClientForm.contains('fullname')" fxFlex="48%">
             <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelFullName" | translate }}</mat-label>
-            <input matInput required formControlName="fullname" />
+            <input matInput required formControlName="fullname" class="upper-case-client" />
             <mat-error
               *ngIf="createClientForm.controls.fullname.hasError('required')"
               [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelFullNameMsg' | translate"
@@ -85,7 +85,7 @@
 
           <mat-form-field *ngIf="createClientForm.contains('firstname')" fxFlex="48%">
             <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelFirstName" | translate }}</mat-label>
-            <input matInput required formControlName="firstname" />
+            <input matInput required formControlName="firstname" class="upper-case-client" />
             <mat-error
               *ngIf="createClientForm.controls.firstname.hasError('required')"
               [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelFirstNameMsg' | translate"
@@ -98,7 +98,7 @@
 
           <mat-form-field *ngIf="createClientForm.contains('middlename')" fxFlex="48%">
             <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelMidName" | translate }}</mat-label>
-            <input matInput formControlName="middlename" />
+            <input matInput formControlName="middlename" class="upper-case-client" />
             <mat-error
               *ngIf="createClientForm.controls.middlename.hasError('pattern')"
               [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelMidNameMsgSpecialChar' | translate"
@@ -107,7 +107,7 @@
 
           <mat-form-field *ngIf="createClientForm.contains('lastname')" fxFlex="48%">
             <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelLastName" | translate }}</mat-label>
-            <input matInput required formControlName="lastname" />
+            <input matInput required formControlName="lastname" class="upper-case-client" />
             <mat-error
               *ngIf="createClientForm.controls.lastname.hasError('required')"
               [innerHTML]="'Client_Component.ClientStepper.GeneralStep.labelLastNameMsg' | translate"
