--- a/src/app/clients/clients-view/clients-view.component.html
+++ b/src/app/clients/clients-view/clients-view.component.html
@@ -128,6 +128,11 @@
             <i class="fas fa-tasks"></i>{{ "Client_Component.ViewClient.btnAction" | translate }}
           </button>
           <mat-menu #Actions="matMenu">
+            <div *ngIf="!this.isInterchangeClient">
+              <button mat-menu-item  *midasHasPermission="'ALL_FUNCTIONS'" [routerLink]="['loans-accounts', 'create']">
+                {{ "Client_Component.ViewClient.btnNewLoan" | translate }}
+              </button>
+              </div>
             <div *ngIf="this.isInterchangeClient">
               <button mat-menu-item [routerLink]="['savings-accounts', 'createIcAccount']">
                 <i class="fas fa-file-invoice-dollar"></i> {{ "Client_Component.ViewClient.btnNewSaving" | translate }}
