add check require bill image

--- a/src/app/transactions/dialog/add-submit-transaction-dialog/add-submit-transaction-dialog.component.html
+++ b/src/app/transactions/dialog/add-submit-transaction-dialog/add-submit-transaction-dialog.component.html
@@ -69,6 +69,7 @@
               type="file"
               (change)="changeListener($event, booking.batchNoSubmit)"
               accept="image/png, image/jpeg"
+              required
             />
           </div>
         </td>
