--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -126,10 +126,10 @@
         <button mat-menu-item *midasHasPermission="'POS_READ'" routerLink="/terminals/limit">
           {{ "Thông tin máy bán hàng" | translate }}
         </button>
-        <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals">
+        <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals" disabled>
           {{ "Quản lý máy bán hàng" | translate }}
         </button>
-        <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party">
+        <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party" disabled>
           {{ "Toolbar_Component.lblThirdParty" | translate }}
         </button>
         <!-- <button mat-menu-item routerLink="/groups/spending-limit">Hạn mức chi tiêu</button> -->
@@ -137,20 +137,20 @@
 
       <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false">
         <button mat-menu-item routerLink="/transaction">Quản lý giao dịch</button>
-        <button mat-menu-item routerLink="/transaction/rollTermSchedule">Quản lý Advance</button>
-        <button mat-menu-item routerLink="/transaction/fee-paid-management">Quản lý phí giao dịch</button>
+        <button mat-menu-item routerLink="/transaction/rollTermSchedule" disabled>Quản lý giao dịch công nợ</button>
+        <button mat-menu-item routerLink="/transaction/fee-paid-management" disabled>Quản lý phí giao dịch</button>
       </mat-menu>
 
       <mat-menu #BookingMenu="matMenu" [overlapTrigger]="false">
-        <button mat-menu-item routerLink="/booking/agency">Đại lý</button>
-        <button mat-menu-item routerLink="/booking/create">Tạo booking nội bộ</button>
+        <button mat-menu-item routerLink="/booking/agency" disabled>Đại lý</button>
+        <button mat-menu-item routerLink="/booking/create" disabled>Tạo booking nội bộ</button>
         <button *midasHasPermission="'POS_UPDATE'" mat-menu-item routerLink="/booking/view">
           Quản lý booking nội bộ
         </button>
       </mat-menu>
 
       <mat-menu #MarketingMenu="matMenu" [overlapTrigger]="false">
-        <button mat-menu-item routerLink="/marketing/create">Tạo chiển dịch</button>
+        <button mat-menu-item routerLink="/marketing/create" disabled>Tạo chiển dịch</button>
         <button mat-menu-item routerLink="/marketing/booking">Booking</button>
       </mat-menu>
       <!-- end -->
@@ -200,7 +200,7 @@
 
         <mat-list-item class="tab-link" [matMenuTriggerFor]="POSPartnerMenu" #POSPartnerMenuTrigger="matMenuTrigger">
           <mat-icon matListIcon><i class="fas fa-hands-helping"></i></mat-icon>
-          <a matLine>máy bán hàng và đối tác</a>
+          <a matLine>Máy bán hàng</a>
         </mat-list-item>
         <mat-list-item class="tab-link" [matMenuTriggerFor]="transactionMenu" #transactionMenuTrigger="matMenuTrigger">
           <mat-icon matListIcon><i class="fas fa-money-check-alt"></i></mat-icon>
@@ -233,14 +233,14 @@
             <a matLine> {{ "Toolbar_Component.lblAdmin" | translate }}</a>
           </mat-list-item>
 
-          <mat-list-item *midasHasActiveModule="'billModule'" [routerLink]="['/bills']">
-            <mat-icon matListIcon>
-              <i class="fas fa-receipt"></i>
-            </mat-icon>
-            <a matLine>Hóa đơn đầu vào</a>
-          </mat-list-item>
+<!--          <mat-list-item *midasHasActiveModule="'billModule'" [routerLink]="['/bills']">-->
+<!--            <mat-icon matListIcon>-->
+<!--              <i class="fas fa-receipt"></i>-->
+<!--            </mat-icon>-->
+<!--            <a matLine>Hóa đơn đầu vào</a>-->
+<!--          </mat-list-item>-->
 
-          <mat-list-item         *midasHasPermissions="'SYSTEM_CONFIG'"
+          <mat-list-item  *midasHasPermissions="'SYSTEM_CONFIG'"
           [routerLink]="['/banks']">
             <mat-icon matListIcon>
               <fa-icon icon="university" size="sm"></fa-icon>
