--- a/src/app/core/shell/sidenav/sidenav.component.scss
+++ b/src/app/core/shell/sidenav/sidenav.component.scss
@@ -3,7 +3,7 @@
   .navigation-panel {
     width: 100%;
     height: 100%;
-    padding-top: 0px  !important;
+    padding-top: 0 !important;
     overflow-x: hidden;
   }
 
@@ -18,6 +18,7 @@
     text-align: center;
     width: 100%;
     z-index: 9999;
+
     &:hover {
       cursor: pointer;
     }
@@ -123,6 +124,8 @@
       list-style: none;
 
       .mat-list-item {
+        color: #000;
+
         .mat-list-icon {
           height: 30px;
           font-size: 22px;
@@ -136,11 +139,12 @@
   .app-brand {
     .app-logo {
       margin: auto;
+
       &:hover {
         cursor: pointer;
       }
     }
-    
+
     .app-logo-text {
       display: none;
     }
@@ -171,10 +175,12 @@
     }
   }
 }
+
 .sidebar-full {
   .navigation-panel {
     padding-top: 5%;
   }
+
   .app-sidenav {
     .icon-menu {
       flex-direction: row;
