mobile UI cho Clients page

--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.scss
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.scss
@@ -1,12 +1,12 @@
 .tab-container {
-    padding: 1%;
-    margin: 1%;
-  
+    padding: 2%;
+    width: 100%;
+
     h3{
       margin:1% auto;
     }
     table {
-      
+
       td,th{
         text-align: center;
       }
@@ -16,7 +16,66 @@
       td:last-child{
         width: 15%;
       }
-                 
+
     }
   }
-  
+
+tr.example-detail-row {
+  height: 0;
+}
+
+
+.mat-row:nth-child(odd) {
+  background: transparent;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover,
+.mat-row:nth-child(even) {
+  background: whitesmoke;
+
+  td {
+    color: #000;
+  }
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: whitesmoke;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.example-element-diagram {
+  min-width: 80px;
+  border: 2px solid black;
+  padding: 8px;
+  font-weight: lighter;
+  margin: 8px 0;
+  height: 104px;
+}
+
+.example-element-symbol {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: normal;
+}
+
+.example-element-description {
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.example-element-description-attribution {
+  opacity: 0.5;
+}
+
+.card-custom {
+  min-width: 100%;
+}
