--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -1,5 +1,5 @@
-<div fxFlex.lt-md="column" fxLayoutAlign="center start">
-  <div fxFlex.gt-md="70" fxFlex.lt-md="100%" fxLayoutAlign="center strech" fxLayout="column" class="tab-container">
+<div fxLayout = "row" fxLayout.lt-lg="column" fxLayoutAlign="center start">
+  <div fxFlex.gt-md="70" fxFlex.lt-md="100%" fxLayoutAlign="center center" fxLayout="column" class="tab-container">
     <mat-card class="card-custom m-b-10" fxFlex="100%">
       <mat-card-header>
         <mat-card-title class="f-left" fxLayout="start center"
@@ -17,7 +17,8 @@
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <table mat-table #identifiersTable [dataSource]="clientIdentities" class="mat-elevation-z8">
+        <table mat-table #identifiersTable [dataSource]="clientIdentities" class="mat-elevation-z8"
+               multiTemplateDataRows matSort>
           <ng-container matColumnDef="id">
             <th fxHide mat-header-cell *matHeaderCellDef>Id</th>
             <td fxHide mat-cell *matCellDef="let identity">{{ identity.id }}</td>
@@ -44,18 +45,18 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef>Thông tin thẻ</th>
-            <td mat-cell *matCellDef="let identity">{{ identity.description }}</td>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Thông tin thẻ</th>
+            <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity">{{ identity.description }}</td>
           </ng-container>
 
           <ng-container matColumnDef="type">
-            <th mat-header-cell *matHeaderCellDef>Loại</th>
-            <td mat-cell *matCellDef="let identity">{{ identity.documentType.name }}</td>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Loại</th>
+            <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity">{{ identity.documentType.name }}</td>
           </ng-container>
 
           <ng-container matColumnDef="documents">
-            <th mat-header-cell *matHeaderCellDef matTooltip="Hình ảnh CMND/CCCD">Đính kèm</th>
-            <td mat-cell *matCellDef="let identity; let i = index">
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef matTooltip="Hình ảnh CMND/CCCD">Đính kèm</th>
+            <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity; let i = index">
               <div *ngFor="let document of identity.documents">
                 {{ document.name }}
                 <fa-icon
@@ -118,22 +119,41 @@
                 *midasHasPermission="'TXN_CREATE'"
                 (click)="routeToMakeTransaction(identity.id, 'rollTerm', identity.documentKey)"
                 matTooltip="Advance"
+                disabled
               >
                 <i class="fas fa-hand-holding-usd"></i>
               </button>
-              <br />
-              <button disabled class="action-button" mat-raised-button *midasHasPermission="'TXN_CREATE'" matTooltip="Thu hộ">
-                <i class="fas fa-arrow-up"></i>
-              </button>
+<!--              <br />-->
+<!--              <button class="action-button" mat-raised-button *midasHasPermission="'TXN_CREATE'" matTooltip="Thu hộ">-->
+<!--                <i class="fas fa-arrow-up"></i>-->
+<!--              </button>-->
 
-              <button disabled class="action-button" mat-raised-button *midasHasPermission="'TXN_CREATE'" matTooltip="Chi hộ">
-                <i class="fas fa-arrow-down"></i>
-              </button>
+<!--              <button class="action-button" mat-raised-button *midasHasPermission="'TXN_CREATE'" matTooltip="Chi hộ">-->
+<!--                <i class="fas fa-arrow-down"></i>-->
+<!--              </button>-->
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="expandedDetail">
+            <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="identitiesColumns.length">
+              <div class="example-element-detail"
+                   [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                <div class="example-element-description" fxLayout="column">
+                  <div>
+                    <span style="font-weight: bold;">{{ 'Chi tiết'| translate}} :</span> &nbsp;{{element.description}}
+                  </div>
+
+                </div>
+              </div>
             </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="identitiesColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: identitiesColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: identitiesColumns"
+              [class.example-expanded-row]="expandedElement === row"
+              (click)="expandedElement = expandedElement === row ? null : row"
+          ></tr>
+          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
       </mat-card-content>
     </mat-card>
@@ -155,10 +175,11 @@
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <table mat-table #identifiersTableOther [dataSource]="clientIdentitiesOther" class="mat-elevation-z8">
+        <table mat-table #identifiersTableOther [dataSource]="clientIdentitiesOther" class="mat-elevation-z8"
+               multiTemplateDataRows matSort>
           <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef>Id</th>
-            <td mat-cell *matCellDef="let identity">{{ identity.id }}</td>
+            <th fxHide  mat-header-cell *matHeaderCellDef>Id</th>
+            <td fxHide mat-cell *matCellDef="let identity">{{ identity.id }}</td>
           </ng-container>
           <ng-container matColumnDef="documentKey">
             <th mat-header-cell *matHeaderCellDef>Số CMND/CCCD |TK Bank</th>
@@ -173,18 +194,18 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef>Miêu tả</th>
-            <td mat-cell *matCellDef="let identity">{{ identity.description }}</td>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Miêu tả</th>
+            <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity">{{ identity.description }}</td>
           </ng-container>
 
           <ng-container matColumnDef="type">
-            <th mat-header-cell *matHeaderCellDef>Loại</th>
-            <td mat-cell *matCellDef="let identity">{{ identity.documentType.name }}</td>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Loại</th>
+            <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity">{{ identity.documentType.name }}</td>
           </ng-container>
 
           <ng-container matColumnDef="documents">
-            <th mat-header-cell *matHeaderCellDef>Đính kèm</th>
-            <td mat-cell *matCellDef="let identity; let i = index">
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Đính kèm</th>
+            <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity; let i = index">
               <div *ngFor="let document of identity.documents">
                 {{ document.name }}
                 <fa-icon
@@ -209,19 +230,38 @@
             </td>
           </ng-container>
 
+          <ng-container matColumnDef="expandedDetail">
+            <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="identitiesColumns.length">
+              <div class="example-element-detail"
+                   [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                <div class="example-element-description" fxLayout="column">
+                  <div>
+                    <span style="font-weight: bold;">{{ 'Chi tiết'| translate}} :</span> &nbsp;{{element.description}}
+                  </div>
+
+                </div>
+              </div>
+            </td>
+          </ng-container>
+
           <tr mat-header-row *matHeaderRowDef="identitiesOtherColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: identitiesOtherColumns"></tr>
+<!--          <tr mat-row *matRowDef="let row; columns: identitiesOtherColumns"></tr>-->
+          <tr mat-row *matRowDef="let row; columns: identitiesOtherColumns"
+              [class.example-expanded-row]="expandedElement === row"
+              (click)="expandedElement = expandedElement === row ? null : row"
+          ></tr>
+          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
       </mat-card-content>
     </mat-card>
   </div>
-  <div fxFlex.gt-md="30" fxFlex.lt-md="100%" fxLayout="column" class="p-5">
+  <div fxFlex.gt-md="30" fxFlex.lt-md="100%" fxLayoutAlign="center start" fxLayout="column" class="tab-container" >
     <mat-card class="card-custom" fxFlex="100%">
-      <mat-card-header>
+      <mat-card-header fxFlex="100%" fxLayoutAlign="center center">
         <h3>Hình ảnh CMND/CCCD/PASSPORT:</h3>
       </mat-card-header>
       <mat-card-content *ngFor="let identity of clientIdentitiesOther">
-        <div fxFlex.gt-sm="100%" fxLayout="column" fxLayoutAlign="start center" *ngIf="identity?.documents">
+        <div fxFlex="100%" fxLayout="column" fxLayoutAlign="start center" *ngIf="identity?.documents">
           <div
             fxFlex.gt-sm="100%"
             class="image-container"
