open ic menu for all function

--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -80,7 +80,7 @@
     </button>
 
     <button
-      disabled
+      *midasHasPermission="'ALL_FUNCTIONS'"
       mat-mini-fab
       [matMenuTriggerFor]="IcMenu"
       #POSPartnerMenuTrigger="matMenuTrigger"
@@ -116,7 +116,7 @@
       </button>
 
       <button
-        *midasHasPermissions="'SYSTEM_CONFIG'"
+        *midasHasPermission="'SYSTEM_CONFIG'"
         mat-mini-fab
         color="basic"
         [matMenuTriggerFor]="accountingMenu"
